# Stupid-stuff-during-school

./: .breakpoints  .gitignore  .replit  InterpreterCheck.cpp  cplusplus.cpp  cplusplus.h  csharp.cs  java.java  main.py  node.js  pyproject.toml
StartUp/: package_manager.py  readme.md  requiredPackages.json  start.cpp  start.h
javaStuff/: Rectangley.java  java.java
