[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_Stupid-stuff-during-school-python-edition"
version = "0.1.0"
[tool.poetry.dependencies]
colorama = "^0.4.4"
python = "^3.8"
[tool.poetry.dev-dependencies]
